feat: stream private exercise videos with HLS
